# huddle

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/agents/: Dockerfile  pyproject.toml
apps/agents/app/: config.py  main.py
apps/agents/app/agents/: base.py  claim_extraction_agent.py  conflict_classifier_agent.py  diversity_load_balancer_agent.py  intake_agent.py  mediation_agent.py  orchestrator.py  participant_profiler_agent.py  summarizer_agent.py
apps/agents/app/api/routes/: analysis.py  demo.py  groups.py  sessions.py
apps/agents/app/db/: models.py
apps/agents/app/services/: embedding_service.py  llm_client.py  observability.py  routing_engine.py  scoring_service.py
apps/agents/app/tests/: test_claim_extraction.py  test_conflict_graph.py  test_diversity_load_balancer_agent.py  test_langgraph_pipeline.py
apps/agents/app/workers/: tasks.py
apps/agents/scripts/: run_pipeline.py  seed_demo.py
apps/api/: Dockerfile  package-lock.json  package.json  pyproject.toml
apps/api/app/: config.py
apps/api/app/agents/: claim_extraction_agent.py  conflict_classifier_agent.py  intake_agent.py  mediation_agent.py  orchestrator.py  participant_profiler_agent.py  summarizer_agent.py
apps/api/app/db/: session.py
apps/api/app/services/: embedding_service.py  graph_service.py  mock_llm_service.py  observability.py
apps/api/app/tests/: test_claim_extraction.py  test_routing_engine.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/scripts/: run_pipeline.py
apps/api/src/: config.ts  server.ts
docs/: agent_pipeline.md  (+4 more)
(+29 files in other folders)
