[project]
name = "huddle-agents"
version = "0.1.0"
description = "Huddle Python AI/ML agent service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.3.0",
  "networkx>=3.3",
  "langgraph>=0.2.70",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
